# sourcegraph

./: .eslintrc.js  .npmrc  BUILD.bazel  WORKSPACE  go.mod  go.sum  jest.config.base.js  mockgen.temp.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sg.config.yaml  tsconfig.all.json
client/: BUILD.bazel
client/branded/: BUILD.bazel  package.json
client/branded/src/: index.ts
client/branded/src/components/search/: CommitSearchResult.tsx  LegacyResultContainer.tsx  ResultContainer.tsx  SyntaxHighlightedSearchQuery.story.tsx
client/branded/src/input/: MonacoQueryInput.story.tsx  SearchBox.story.tsx  SearchContextMenu.story.tsx  SearchContextMenuItem.story.tsx  SearchHistoryDropdown.tsx
client/branded/src/input/codemirror/: completion.ts
client/branded/src/input/experimental/: Suggestions.tsx
client/branded/src/results/: StreamingSearchResultsList.tsx
client/branded/src/results/progress/: StreamingProgress.story.tsx  StreamingProgressSkippedPopover.story.tsx  StreamingProgressSkippedPopover.tsx
client/branded/src/results/sidebar/: FilterLink.tsx
client/branded/src/search-ui/components/: LegacyResultContainer.tsx  ResultContainer.tsx
client/branded/src/search-ui/results/: StreamingSearchResultsList.tsx
client/browser/: BUILD.bazel  package.json  tsconfig.json
client/browser/src/integration/: github.test.ts  gitlab.test.ts
client/browser/src/shared/platform/: context.ts  inlineExtensionsService.ts
client/build-config/: BUILD.bazel
client/client-api/: BUILD.bazel  package.json  tsconfig.json
client/client-api/src/: hover.ts
client/codeintellify/: BUILD.bazel  package.json
client/common/: BUILD.bazel  package.json
client/extension-api-types/: BUILD.bazel
client/extension-api-types/src/: hover.d.ts
client/extension-api/src/: sourcegraph.d.ts
client/http-client/: BUILD.bazel  package.json
client/http-client/src/graphql/: graphql.ts
client/jetbrains/: BUILD.bazel  package.json
client/jetbrains/scripts/: build.ts
client/jetbrains/webview/: BUILD.bazel
client/jetbrains/webview/src/search/: StatusBar.tsx
client/observability-client/: package.json
client/observability-server/: package.json
client/search-ui/: BUILD.bazel  package.json
client/search-ui/src/components/: SyntaxHighlightedSearchQuery.tsx
client/search-ui/src/input/: CodeMirrorQueryInput.tsx  QueryInput.ts  SearchBox.tsx
client/search-ui/src/input/codemirror/: completion.ts  index.ts
client/shared/: BUILD.bazel  package.json  tsconfig.json
client/shared/dev/: BUILD.bazel  tools.bzl
client/shared/src/actions/: ActionItem.test.tsx
client/shared/src/api/: contract.ts
client/shared/src/api/client/: connection.ts  enabledExtensions.ts  mainthread-api.ts  search.ts
client/shared/src/api/extension/: activation.ts  extensionApi.ts  extensionHostApi.ts  extensionHostState.ts
client/shared/src/api/integration-test/: languageFeatures.test.ts  testHelpers.ts  windows.test.ts
client/shared/src/codeintel/legacy-extensions/: api.ts
client/shared/src/extensions/: createLazyLoadedController.ts  createSyncLoadedController.ts  extension.ts
client/shared/src/hover/: HoverOverlay.fixtures.ts  HoverOverlay.tsx  HoverOverlay.types.ts  actions.ts
client/shared/src/platform/: context.ts
client/shared/src/search/query/: decoratedToken.ts  providers-utils.ts
client/shared/src/symbols/: SymbolIcon.tsx  symbols.ts
client/shared/src/testing/integration/: mockExtension.ts
client/shared/src/util/: url.ts
client/storybook/: BUILD.bazel  package.json
client/storybook/src/: main.ts
client/testing/: BUILD.bazel
client/vscode/: BUILD.bazel  package.json  tsconfig.json
client/vscode/scripts/: build.ts
client/vscode/src/webview/platform/: context.ts
client/vscode/src/webview/search-panel/: SearchHomeView.tsx  SearchResultsView.tsx
client/web/: BUILD.bazel  package.json
client/web-sveltekit/: package.json  vite.config.ts
client/web-sveltekit/src/: app.d.ts
client/web-sveltekit/src/lib/: CodeMirrorBlob.svelte  FileTree.svelte  Icon.svelte  LoadingSpinner.svelte  Popover.svelte  Tooltip.svelte  app.ts  dom.ts  intersection-observer.ts  stores.ts  utils.ts
client/web-sveltekit/src/lib/codemirror/: client-highlighting.ts
client/web-sveltekit/src/lib/repo/: actions.ts  utils.ts
client/web-sveltekit/src/lib/search/: CodeMirrorQueryInput.svelte  QueryExampleChip.svelte  SearchBox.svelte  SyntaxHighlightedQuery.svelte  queryExamples.ts  results.ts  state.ts  utils.ts
client/web-sveltekit/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Header.svelte  styles.scss
client/web-sveltekit/src/routes/[...repo]/: +layout.svelte  +page.svelte  Permalink.svelte
client/web-sveltekit/src/routes/search/: +page.svelte  +page.ts  CodeExcerpt.svelte  FileMatchChildren.svelte  FileSearchResult.svelte  QueryExamples.svelte  RepoSearchResult.svelte  SearchHome.svelte  SearchResult.svelte  SearchResults.svelte  SidebarSection.svelte  SymbolSearchResult.svelte
client/web/dev/esbuild/: build.ts
client/web/dev/utils/: environment-config.ts
client/web/src/: Layout.tsx  SourcegraphWebApp.tsx  auth.ts
client/web/src/codeintel/: ReferencesPanel.mocks.ts  ReferencesPanel.tsx
client/web/src/communitySearchContexts/: CommunitySearchContextPage.tsx
client/web/src/components/WebHoverOverlay/: WebHoverOverlay.tsx
client/web/src/enterprise/: EnterpriseWebApp.tsx
client/web/src/integration/: blob-viewer.test.ts  codemirror-blob-view.test.ts
client/web/src/nav/: GlobalNavbar.tsx
client/web/src/notebooks/: index.ts
client/web/src/org/area/: OrgArea.tsx
client/web/src/platform/: context.ts
client/web/src/repo/: RepoContainer.tsx  RepoHeader.story.tsx  RepoRevisionContainer.tsx  backend.ts  routes.tsx
client/web/src/savedSearches/: SavedSearchForm.tsx
client/web/src/search/: Notepad.tsx  SearchConsolePage.tsx
client/web/src/settings/: MonacoSettingsEditor.tsx
client/web/src/site-admin/: SiteAdminPingsPage.tsx  WebhookCreateUpdatePage.tsx  backend.ts
client/web/src/stores/: experimentalFeatures.ts
client/wildcard/: BUILD.bazel  package.json
(+139 files in other folders)
