load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "testing_lib",
    srcs = [
        "src/aria-asserts.ts",
        "src/index.ts",
    ],
    deps = [
        "//:node_modules/@types/jest",  #keep
    ],
)

npm_package(
    name = "testing",
    srcs = [
        "package.json",
        ":testing_lib",
    ],
)
